# numbacc

./: .gitignore  Makefile  README.md  conda-lock.default.yml  conda-lock.dev.yml  conda-project.yml  devtools_environment.yml  e2e.spy  environment.yml  load_cutile.py  mlir20_environment.yml  mlir21_environment.yml  nbrt.c  py312_environment.yml  pyproject.toml  virtual-packages.yml
.github/workflows/: mlir_conda_builder.yml  nbcc_ci.yml  update_deps.yml
conda-recipes/cuda-tile/: build.sh  conda_build_config.yaml  meta.yaml  setup.py
conda-recipes/mlir-python-bindings/: 0001-Support-cross-compiling-standalone-MLIR.patch  bld.bat  build.sh  meta.yaml  test.py
examples/: basic_if.spy  demo_mlir_tensor_lib.ipynb  llm_tensor.spy  mlir_tensor.spy  mlir_tensor_lib.spy
examples/component_demos/: 01_frontend_only.py  02_egraph_conversion.py  03_egraph_optimization.py  04_extraction.py  05_full_lifecycle.py
examples/cuda_tile/: tile_example.spy
examples/e2e/: e2e_arithmetic.spy  e2e_class.spy  e2e_class_ops.spy  e2e_ifelse.spy  e2e_loop_accumulate.spy  e2e_loop_nested_if.spy  e2e_loops.spy  e2e_nested_if.spy  e2e_print_strings.spy
journal/: cost_model_experiments.md  egraph_deep_dive.md  trial1_20260118_173258.md
nbcc/: __main__.py  compiler.py  developer.py  mlir_lowering.py  mlir_utils.py  viz.py
nbcc/cli/: __init__.py  __main__.py  cli.py
nbcc/cutile_backend/: backend.py
nbcc/egraph/: conversion.py  rules.py
nbcc/experiments/: __init__.py  benchmark.py  constant_folding.py  cost_models.py  demo_cost_model_validation.py  extraction_analysis.py  features.py  ml_training.py  principled_costs.py  runtime_measurement.py  synthetic_data.py  validation_metrics.py
nbcc/frontend/: __init__.py  extra_spy_builtins.py  frontend.py  grammar.py  restructure.py  spy_ast.py
nbcc/mlir_backend/: backend.py  mlir_passes.py  transforms.py
scripts/: checkout.sh  viz.py
(+20 files in other folders)
