
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "nbcc"
version = "0.0.1"
description = "NumbaCC"
authors = []
license = {text = "BSD-2-Clause"}
readme = "README.md"
dependencies = [
    # TODO
]

[tool.setuptools.packages.find]
include = ["nbcc", "nbcc.*"]


[tool.black]
line-length = 79
target-version = ['py312']


[tool.mypy]
mypy_path = ["deps/sealir", "deps/spy"]
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["mlir.*", "sealir.*", "spy.*"]
ignore_errors = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["numba_scfg.*"]
ignore_missing_imports = true
